--- a/src/buy.html
+++ b/src/buy.html
@@ -56,7 +56,7 @@
               <span class="pointer-events-none">Domains</span>
             </button>
             <div
-              class="absolute hidden bg-primary group-hover:block text-white text-center rounded w-32 rounded-br-lg px-3 divide-y"
+              class="absolute hidden bg-primary group-hover:block text-white text-center rounded w-32 rounded-br-lg px-3 divide-y z-50"
             >
               <a href="#" class="block px-6 py-2">Buy</a> 
               <a href="#" class="block px-6 py-2">Transfer</a>
@@ -76,7 +76,7 @@
               <span class="pointer-events-none">Servers</span>
             </button>
             <div
-              class="absolute hidden bg-primary group-hover:block divide-y text-white text-center rounded w-32 rounded-br-lg"
+              class="absolute hidden bg-primary group-hover:block divide-y text-white text-center rounded w-32 rounded-br-lg z-50"
             >
               <a href="#" class="block px-6 py-2">Buy</a>
               <a href="#" class="block px-6 py-2">Transfer</a>
