--- a/src/hosting.html
+++ b/src/hosting.html
@@ -11,7 +11,10 @@
     />
   </head>
   <body class="bg-gray-100 font-sans leading-normal tracking-normal">
-    <div class="flex justify-between items-center bg-white p-4 shadow-md">
+    <div class="flex justify-between items-center bg-white shadow-md p-4">
+      <div class="flex items-center md:hidden">
+        <i class="fa fa-bars fa-lg" onclick="toggleSidebar()"></i>
+      </div>
       <div class="flex items-center space-x-4">
         <img
           src="./assets/avatar.svg"
@@ -20,7 +23,7 @@
         />
         <span class="text-xl font-semibold">Admin</span>
       </div>
-      <div class="relative flex-1 mx-4">
+      <div class="relative flex-1 mx-4 hidden md:block">
         <input
           type="text"
           placeholder="Search"
@@ -42,9 +45,9 @@
       <!-- Sidebar -->
       <div
         id="sidebar"
-        class="sidebar-expanded flex shadow-3xl rounded p-4 relative transition-all duration-300 flex-col bg-white shadow-md rounded-md"
+        class="sidebar-expanded min-h-full md:flex hidden shadow-3xl rounded p-4 absolute transition-all duration-300 flex-col bg-white shadow-md rounded-md md:relative md:z-0 md:flex md:flex-col md:bg-white md:shadow-md md:rounded-md absolute z-50"
       >
-        <div class="flex items-center justify-end h-20 border-b">
+        <div class="flex items-center justify-end">
           <button onclick="toggleSidebar()" class="focus:outline-none">
             <div class="flex items-center">
               <!-- <i class="fas fa-bars"></i> -->
@@ -53,21 +56,21 @@
             </div>
           </button>
         </div>
-        <nav class="mt-10">
+        <nav class="md:mt-10 mt-5">
           <a
             href="/dashboard.html"
             id="dashboard-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
           >
             <span class="inline-flex justify-center w-6">
               <img src="./assets/dashboard.svg" />
             </span>
-            <span class="ml-2 menu-item-text">Dashboard</span>
+            <span class="ml-2 menu-item-text text-dash">Dashboard</span>
           </a>
           <a
             href="/src/domains.html"
             id="domains-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
           >
             <span class="inline-flex justify-center w-6">
               <img src="./assets/domain.svg" />
@@ -77,7 +80,7 @@
           <a
             href="/hosting.html"
             id="hosting-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
           >
             <span class="inline-flex justify-center w-6">
               <img src="./assets/hosting.svg" />
@@ -86,7 +89,7 @@
           </a>
           <div class="flex flex-col">
             <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               onclick="toggleDropdown('manageServers')"
             >
               <span class="inline-flex justify-center w-6">
@@ -100,19 +103,19 @@
             <div id="manageServers" class="ml-8 hidden">
               <a
                 href="/src/dedicated-servers"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Dedicated Servers</a
               >
               <a
                 href="/src/virtual-servers"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Virtual Servers</a
               >
             </div>
           </div>
           <div class="flex flex-col">
             <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               onclick="toggleDropdown('manageSecurity')"
             >
               <span class="inline-flex justify-center w-6">
@@ -126,17 +129,17 @@
             <div id="manageSecurity" class="ml-8 hidden">
               <a
                 href="/src/ssl-certificate"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >SSL Certificate</a
               >
               <a
                 href="/src/website-security"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Website Security</a
               >
               <a
                 href="/src/email-security"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Email Security</a
               >
             </div>
@@ -144,7 +147,7 @@
           <a
             href="/src/email-management"
             id="email-management-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
           >
             <span class="inline-flex justify-center w-6">
               <img src="./assets/email.svg" />
@@ -153,7 +156,7 @@
           </a>
           <div class="flex flex-col">
             <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               onclick="toggleDropdown('payments')"
             >
               <span class="inline-flex justify-center w-6">
@@ -167,12 +170,12 @@
             <div id="payments" class="ml-8 hidden">
               <a
                 href="/transaction.html"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Transaction History</a
               >
               <a
                 href="/dash_payment.html"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
                 >Payment Methods</a
               >
             </div>
@@ -180,7 +183,7 @@
           <a
             href="/setting.html"
             id="settings-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
           >
             <span class="inline-flex justify-center w-6">
               <img src="./assets/settings.svg" />
@@ -190,7 +193,7 @@
         </nav>
         <a
           href="#"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block mt-10"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/logout.svg" />
@@ -200,17 +203,17 @@
       </div>
 
       <!-- Main Content -->
-      <div class="w-full h-screen p-6 bg-gray-50">
-        <div class="p-6">
-          <div class="flex items-center gap-4">
+      <div class="w-full h-screen md:p-6 bg-gray-50">
+        <div class="md:p-6 p-2">
+          <div class="flex items-center gap-3 mb-4">
             <img src="./assets/hosting.svg" />
             <h2 class="text-xl text-dash">Hosting</h2>
           </div>
           <h2 class="text-2xl font-bold mb-6">Cloud Instances</h2>
-          <div class="flex justify-between items-center py-4">
-            <div class="flex items-center space-x-4">
+          <div class="flex justify-between items-center py-4 flex-wrap gap-4">
+            <div class="flex md:items-center items-start md:flex-row flex-col flex-wrap gap-4 content-start	justify-start">
               <button
-                class="flex items-center px-4 py-2 bg-white border border-gray-300 rounded text-gray-600 hover:bg-gray-100"
+                class="flex items-center px-4 py-2 bg-white border border-gray-300 rounded text-heading hover:bg-gray-100"
               >
                 <img src="./assets/filter.svg" class="mr-2" />
                 Filters
@@ -232,7 +235,7 @@
                 </svg>
                 Add New
               </button>
-              <span class="text-gray-600">2 row(s) selected</span>
+              <span class="text-heading">2 row(s) selected</span>
             </div>
             <div class="relative">
               <input
@@ -258,34 +261,34 @@
             <table class="min-w-full bg-white shadow-md rounded-md">
               <thead class="bg-[#F7FAF9] text-gray-700">
                 <tr>
-                  <th class="w-12 py-3 px-4 text-left">
+                  <th class="w-12 py-3 px-4 text-left text-heading">
                     <input type="checkbox"  />
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Instance Name
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Instance Type
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Renews
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Created On
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Last Updated
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Status
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
-                  <th class="py-3 px-4 text-left">
+                  <th class="py-3 px-4 text-left text-heading">
                     Manage
                     <i class="fas fa-arrow-down text-dash pl-4 fa-sm"></i>
                   </th>
@@ -304,10 +307,10 @@
                     <span class="text-yellow-500 mr-2">•</span> Provisioning
                   </td>
                   <td class="py-3 px-4 flex space-x-2">
-                    <button><i class="fa fa-eye text-gray-600"></i></button>
-                    <button><i class="fa fa-pen text-gray-600"></i></button>
+                    <button><i class="fa fa-eye text-heading"></i></button>
+                    <button><i class="fa fa-pen text-heading"></i></button>
                     <button>
-                      <i class="far fa-trash-alt text-gray-600"></i>
+                      <i class="far fa-trash-alt text-heading"></i>
                     </button>
                   </td>
                 </tr>
@@ -323,10 +326,10 @@
                     Provisioning in Progress
                   </td>
                   <td class="py-3 px-4 flex space-x-2">
-                    <button><i class="fa fa-eye text-gray-600"></i></button>
-                    <button><i class="fa fa-pen text-gray-600"></i></button>
+                    <button><i class="fa fa-eye text-heading"></i></button>
+                    <button><i class="fa fa-pen text-heading"></i></button>
                     <button>
-                      <i class="far fa-trash-alt text-gray-600"></i>
+                      <i class="far fa-trash-alt text-heading"></i>
                     </button>
                   </td>
                 </tr>
@@ -342,10 +345,10 @@
                     progress
                   </td>
                   <td class="py-3 px-4 flex space-x-2">
-                    <button><i class="fa fa-eye text-gray-600"></i></button>
-                    <button><i class="fa fa-pen text-gray-600"></i></button>
+                    <button><i class="fa fa-eye text-heading"></i></button>
+                    <button><i class="fa fa-pen text-heading"></i></button>
                     <button>
-                      <i class="far fa-trash-alt text-gray-600"></i>
+                      <i class="far fa-trash-alt text-heading"></i>
                     </button>
                   </td>
                 </tr>
@@ -361,10 +364,10 @@
                     progress
                   </td>
                   <td class="py-3 px-4 flex space-x-2">
-                    <button><i class="fa fa-eye text-gray-600"></i></button>
-                    <button><i class="fa fa-pen text-gray-600"></i></button>
+                    <button><i class="fa fa-eye text-heading"></i></button>
+                    <button><i class="fa fa-pen text-heading"></i></button>
                     <button>
-                      <i class="far fa-trash-alt text-gray-600"></i>
+                      <i class="far fa-trash-alt text-heading"></i>
                     </button>
                   </td>
                 </tr>
@@ -380,10 +383,10 @@
                     progress
                   </td>
                   <td class="py-3 px-4 flex space-x-2">
-                    <button><i class="fa fa-eye text-gray-600"></i></button>
-                    <button><i class="fa fa-pen text-gray-600"></i></button>
+                    <button><i class="fa fa-eye text-heading"></i></button>
+                    <button><i class="fa fa-pen text-heading"></i></button>
                     <button>
-                      <i class="far fa-trash-alt text-gray-600"></i>
+                      <i class="far fa-trash-alt text-heading"></i>
                     </button>
                   </td>
                 </tr>
