--- a/src/addpayment.html
+++ b/src/addpayment.html
@@ -11,7 +11,10 @@
     />
   </head>
   <body class="bg-gray-100 font-sans leading-normal tracking-normal">
-    <div class="flex justify-between items-center bg-white p-4 shadow-md">
+    <div class="flex justify-between items-center bg-white shadow-md p-4">
+      <div class="flex items-center md:hidden">
+        <i class="fa fa-bars fa-lg" onclick="toggleSidebar()"></i>
+      </div>
       <div class="flex items-center space-x-4">
         <img
           src="./assets/avatar.svg"
@@ -20,7 +23,7 @@
         />
         <span class="text-xl font-semibold">Admin</span>
       </div>
-      <div class="relative flex-1 mx-4">
+      <div class="relative flex-1 mx-4 hidden md:block">
         <input
           type="text"
           placeholder="Search"
@@ -41,175 +44,175 @@
     <div class="flex flex-col md:flex-row p-4 bg-[#fbfdfc]">
       <!-- Sidebar -->
       <div
-        id="sidebar"
-        class="sidebar-expanded flex shadow-3xl rounded p-4 relative transition-all duration-300 flex-col bg-white shadow-md rounded-md"
-      >
-        <div class="flex items-center justify-end h-20 border-b">
-          <button onclick="toggleSidebar()" class="focus:outline-none">
-            <div class="flex items-center">
-              <!-- <i class="fas fa-bars"></i> -->
-              <img src="./assets/sidebar.svg" />
-              <img src="./assets/arrow_left.svg" />
-            </div>
-          </button>
-        </div>
-        <nav class="mt-10">
-          <a
-            href="/dashboard.html"
-            id="dashboard-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6">
-              <img src="./assets/dashboard.svg" />
-            </span>
-            <span class="ml-2 menu-item-text">Dashboard</span>
-          </a>
-          <a
-            href="/src/domains.html"
-            id="domains-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6">
-              <img src="./assets/domain.svg" />
-            </span>
-            <span class="ml-2 menu-item-text">Domains</span>
-          </a>
-          <a
-            href="/hosting.html"
-            id="hosting-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6">
-              <img src="./assets/hosting.svg" />
-            </span>
-            <span class="ml-2 menu-item-text">Hosting</span>
-          </a>
-          <div class="flex flex-col">
-            <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-              onclick="toggleDropdown('manageServers')"
-            >
-              <span class="inline-flex justify-center w-6">
-                <img src="./assets/manage_server.svg" />
-              </span>
-              <span class="ml-2 menu-item-text">Manage Servers</span>
-              <span class="ml-auto">
-                <i id="manageServers-icon" class="fas"></i>
-              </span>
-            </button>
-            <div id="manageServers" class="ml-8 hidden">
-              <a
-                href="/src/dedicated-servers"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Dedicated Servers</a
-              >
-              <a
-                href="/src/virtual-servers"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Virtual Servers</a
-              >
-            </div>
+      id="sidebar"
+      class="sidebar-expanded min-h-full md:flex hidden shadow-3xl rounded p-4 absolute transition-all duration-300 flex-col bg-white shadow-md rounded-md md:relative md:z-0 md:flex md:flex-col md:bg-white md:shadow-md md:rounded-md absolute z-50"
+    >
+      <div class="flex items-center justify-end">
+        <button onclick="toggleSidebar()" class="focus:outline-none">
+          <div class="flex items-center">
+            <!-- <i class="fas fa-bars"></i> -->
+            <img src="./assets/sidebar.svg" />
+            <img src="./assets/arrow_left.svg" />
           </div>
-          <div class="flex flex-col">
-            <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-              onclick="toggleDropdown('manageSecurity')"
-            >
-              <span class="inline-flex justify-center w-6">
-                <img src="./assets/manage_security.svg" />
-              </span>
-              <span class="ml-2 menu-item-text">Manage Security</span>
-              <span class="ml-auto">
-                <i id="manageSecurity-icon" class="fas"></i>
-              </span>
-            </button>
-            <div id="manageSecurity" class="ml-8 hidden">
-              <a
-                href="/src/ssl-security"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >SSL Certificate</a
-              >
-              <a
-                href="/src/website-security"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Website Security</a
-              >
-              <a
-                href="/src/email-security"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Email Security</a
-              >
-            </div>
-          </div>
-          <a
-            href="/src/email-management"
-            id="email-management-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6">
-              <img src="./assets/email.svg" />
-            </span>
-            <span class="ml-2 menu-item-text">Email Management</span>
-          </a>
-          <div class="flex flex-col">
-            <button
-              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-              onclick="toggleDropdown('payments')"
-            >
-              <span class="inline-flex justify-center w-6">
-                <img src="./assets/payment.svg" />
-              </span>
-              <span class="ml-2 menu-item-text">Payments</span>
-              <span class="ml-auto">
-                <i id="payments-icon" class="fas"></i>
-              </span>
-            </button>
-            <div id="payments" class="ml-8 hidden">
-              <a
-                href="/transaction.html"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Transaction History</a
-              >
-              <a
-                href="/dash_payment.html"
-                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-                >Payment Methods</a
-              >
-            </div>
-          </div>
-          <a
-            href="/setting.html"
-            id="settings-link"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6">
-              <img src="./assets/settings.svg" />
-            </span>
-            <span class="ml-2 menu-item-text">Settings</span>
-          </a>
-        </nav>
+        </button>
+      </div>
+      <nav class="md:mt-10 mt-5">
         <a
-          href="#"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block"
+          href="/dashboard.html"
+          id="dashboard-link"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
-            <img src="./assets/logout.svg" />
+            <img src="./assets/dashboard.svg" />
           </span>
-          <span class="ml-2 menu-item-text">Log Out</span>
+          <span class="ml-2 menu-item-text text-dash">Dashboard</span>
         </a>
-      </div>
+        <a
+          href="/src/domains.html"
+          id="domains-link"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+        >
+          <span class="inline-flex justify-center w-6">
+            <img src="./assets/domain.svg" />
+          </span>
+          <span class="ml-2 menu-item-text">Domains</span>
+        </a>
+        <a
+          href="/hosting.html"
+          id="hosting-link"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+        >
+          <span class="inline-flex justify-center w-6">
+            <img src="./assets/hosting.svg" />
+          </span>
+          <span class="ml-2 menu-item-text">Hosting</span>
+        </a>
+        <div class="flex flex-col">
+          <button
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+            onclick="toggleDropdown('manageServers')"
+          >
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/manage_server.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Manage Servers</span>
+            <span class="ml-auto">
+              <i id="manageServers-icon" class="fas"></i>
+            </span>
+          </button>
+          <div id="manageServers" class="ml-8 hidden">
+            <a
+              href="/src/dedicated-servers"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Dedicated Servers</a
+            >
+            <a
+              href="/src/virtual-servers"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Virtual Servers</a
+            >
+          </div>
+        </div>
+        <div class="flex flex-col">
+          <button
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+            onclick="toggleDropdown('manageSecurity')"
+          >
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/manage_security.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Manage Security</span>
+            <span class="ml-auto">
+              <i id="manageSecurity-icon" class="fas"></i>
+            </span>
+          </button>
+          <div id="manageSecurity" class="ml-8 hidden">
+            <a
+              href="/src/ssl-certificate"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >SSL Certificate</a
+            >
+            <a
+              href="/src/website-security"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Website Security</a
+            >
+            <a
+              href="/src/email-security"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Email Security</a
+            >
+          </div>
+        </div>
+        <a
+          href="/src/email-management"
+          id="email-management-link"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+        >
+          <span class="inline-flex justify-center w-6">
+            <img src="./assets/email.svg" />
+          </span>
+          <span class="ml-2 menu-item-text">Email Management</span>
+        </a>
+        <div class="flex flex-col">
+          <button
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+            onclick="toggleDropdown('payments')"
+          >
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/payment.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Payments</span>
+            <span class="ml-auto">
+              <i id="payments-icon" class="fas"></i>
+            </span>
+          </button>
+          <div id="payments" class="ml-8 hidden">
+            <a
+              href="/transaction.html"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Transaction History</a
+            >
+            <a
+              href="/dash_payment.html"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+              >Payment Methods</a
+            >
+          </div>
+        </div>
+        <a
+          href="/setting.html"
+          id="settings-link"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
+        >
+          <span class="inline-flex justify-center w-6">
+            <img src="./assets/settings.svg" />
+          </span>
+          <span class="ml-2 menu-item-text">Settings</span>
+        </a>
+      </nav>
+      <a
+        href="#"
+        class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block mt-10"
+      >
+        <span class="inline-flex justify-center w-6">
+          <img src="./assets/logout.svg" />
+        </span>
+        <span class="ml-2 menu-item-text">Log Out</span>
+      </a>
+    </div>
 
       <!-- Main Content -->
       <div class="w-full h-screen">
-        <div class="p-6">
-          <div class="flex items-center gap-4">
+        <div class="md:p-6 p-2">
+          <div class="flex items-center gap-3 mb-4">
             <img src="./assets/payment.svg" />
             <h2 class="text-xl text-dash">Payments</h2>
           </div>
           <h2 class="text-2xl font-bold mb-6">Add New Payment Method</h2>
-          <form>
+          <form class="md:w-2/5">
             <div class="mb-4">
-              <label class="block text-gray-700">Name on Card</label>
+              <label class="block text-label">Name on Card</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -217,7 +220,7 @@
               />
             </div>
             <div class="mb-4">
-              <label class="block text-gray-700">Card Number</label>
+              <label class="block text-label">Card Number</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -225,7 +228,7 @@
               />
             </div>
             <div class="mb-4">
-              <label class="block text-gray-700">Type</label>
+              <label class="block text-label">Type</label>
               <select class="w-full p-2 border border-gray-300 rounded mt-1">
                 <option>Visa</option>
                 <option>MasterCard</option>
@@ -233,7 +236,7 @@
             </div>
             <div class="flex space-x-4 mb-4">
               <div class="flex-1">
-                <label class="block text-gray-700">Expiry</label>
+                <label class="block text-label">Expiry</label>
                 <input
                   type="text"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -241,7 +244,7 @@
                 />
               </div>
               <div class="flex-1">
-                <label class="block text-gray-700">CVV</label>
+                <label class="block text-label">CVV</label>
                 <input
                   type="text"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -250,32 +253,45 @@
               </div>
             </div>
             <div class="mb-4">
-              <label class="block text-gray-700">Status</label>
-              <div class="flex items-center mt-2">
-                <input
-                  type="radio"
-                  name="status"
-                  value="Primary"
-                  class="mr-2"
-                />
-                <label class="mr-4">Primary</label>
-                <input type="radio" name="status" value="Active" class="mr-2" />
-                <label class="mr-4">Active</label>
-                <input
-                  type="radio"
-                  name="status"
-                  value="Inactive"
-                  class="mr-2"
-                />
-                <label>Inactive</label>
+              <label class="block text-label">Status</label>
+              <div class="flex flex-col mt-2 gap-3">
+                <div>
+                  <input
+                    type="radio"
+                    name="status"
+                    value="Primary"
+                    class="mr-2"
+                  />
+                  <label class="mr-4">Primary</label>
+                </div>
+                <div>
+                  <input
+                    type="radio"
+                    name="status"
+                    value="Active"
+                    class="mr-2"
+                  />
+                  <label class="mr-4">Active</label>
+                </div>
+                <div>
+                  <input
+                    type="radio"
+                    name="status"
+                    value="Inactive"
+                    class="mr-2"
+                  />
+                  <label>Inactive</label>
+                </div>
               </div>
             </div>
-            <button
-              type="submit"
-              class="bg-gray-800 text-white p-2 rounded mt-4"
-            >
-              Add
-            </button>
+            <div class="flex justify-end">
+              <button
+                type="submit"
+                class="bg-gray-800 text-white p-2 px-10 rounded mt-4"
+              >
+                Add
+              </button>
+            </div>
           </form>
         </div>
       </div>
