--- a/src/payment.html
+++ b/src/payment.html
@@ -167,19 +167,19 @@
           </h3>
           <form>
             <div class="flex gap-6 items-center my-8 flex-wrap">
-              <div class="flex items-center gap-4">
+              <div class="flex items-center gap-3 mb-4">
                 <input type="radio" id="visa" name="payment" class="" checked />
                 <label for="visa" class="inline-flex items-center">
                   <img src="./assets/visa_master.svg" alt="Visa" class="" />
                 </label>
               </div>
-              <div class="flex items-center gap-4">
+              <div class="flex items-center gap-3 mb-4">
                 <input type="radio" id="paynow" name="payment" class="" />
                 <label for="paynow" class="inline-flex items-center">
                   <img src="./assets/paynow.svg" alt="PayNow" class=" " />
                 </label>
               </div>
-              <div class="flex items-center gap-4">
+              <div class="flex items-center gap-3 mb-4">
                 <input
                   type="radio"
                   id="bank_transfer"
