--- a/src/setting.html
+++ b/src/setting.html
@@ -11,7 +11,10 @@
     />
   </head>
   <body class="bg-gray-100 font-sans leading-normal tracking-normal">
-    <div class="flex justify-between items-center bg-white p-4 shadow-md">
+    <div class="flex justify-between items-center bg-white shadow-md p-4">
+      <div class="flex items-center md:hidden">
+        <i class="fa fa-bars fa-lg" onclick="toggleSidebar()"></i>
+      </div>
       <div class="flex items-center space-x-4">
         <img
           src="./assets/avatar.svg"
@@ -20,7 +23,7 @@
         />
         <span class="text-xl font-semibold">Admin</span>
       </div>
-      <div class="relative flex-1 mx-4">
+      <div class="relative flex-1 mx-4 hidden md:block">
         <input
           type="text"
           placeholder="Search"
@@ -42,9 +45,9 @@
       <!-- Sidebar -->
       <div
       id="sidebar"
-      class="sidebar-expanded flex shadow-3xl rounded p-4 relative transition-all duration-300 flex-col bg-white shadow-md rounded-md"
+      class="sidebar-expanded min-h-full md:flex hidden shadow-3xl rounded p-4 absolute transition-all duration-300 flex-col bg-white shadow-md rounded-md md:relative md:z-0 md:flex md:flex-col md:bg-white md:shadow-md md:rounded-md absolute z-50"
     >
-      <div class="flex items-center justify-end h-20 border-b">
+      <div class="flex items-center justify-end">
         <button onclick="toggleSidebar()" class="focus:outline-none">
           <div class="flex items-center">
             <!-- <i class="fas fa-bars"></i> -->
@@ -53,21 +56,21 @@
           </div>
         </button>
       </div>
-      <nav class="mt-10">
+      <nav class="md:mt-10 mt-5">
         <a
           href="/dashboard.html"
           id="dashboard-link"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/dashboard.svg" />
           </span>
-          <span class="ml-2 menu-item-text">Dashboard</span>
+          <span class="ml-2 menu-item-text text-dash">Dashboard</span>
         </a>
         <a
           href="/src/domains.html"
           id="domains-link"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/domain.svg" />
@@ -77,7 +80,7 @@
         <a
           href="/hosting.html"
           id="hosting-link"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/hosting.svg" />
@@ -86,7 +89,7 @@
         </a>
         <div class="flex flex-col">
           <button
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
             onclick="toggleDropdown('manageServers')"
           >
             <span class="inline-flex justify-center w-6">
@@ -100,19 +103,19 @@
           <div id="manageServers" class="ml-8 hidden">
             <a
               href="/src/dedicated-servers"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Dedicated Servers</a
             >
             <a
               href="/src/virtual-servers"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Virtual Servers</a
             >
           </div>
         </div>
         <div class="flex flex-col">
           <button
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
             onclick="toggleDropdown('manageSecurity')"
           >
             <span class="inline-flex justify-center w-6">
@@ -126,17 +129,17 @@
           <div id="manageSecurity" class="ml-8 hidden">
             <a
               href="/src/ssl-certificate"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >SSL Certificate</a
             >
             <a
               href="/src/website-security"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Website Security</a
             >
             <a
               href="/src/email-security"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Email Security</a
             >
           </div>
@@ -144,7 +147,7 @@
         <a
           href="/src/email-management"
           id="email-management-link"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/email.svg" />
@@ -153,7 +156,7 @@
         </a>
         <div class="flex flex-col">
           <button
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+            class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
             onclick="toggleDropdown('payments')"
           >
             <span class="inline-flex justify-center w-6">
@@ -167,12 +170,12 @@
           <div id="payments" class="ml-8 hidden">
             <a
               href="/transaction.html"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Transaction History</a
             >
             <a
               href="/dash_payment.html"
-              class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              class="block p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
               >Payment Methods</a
             >
           </div>
@@ -180,7 +183,7 @@
         <a
           href="/setting.html"
           id="settings-link"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+          class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700"
         >
           <span class="inline-flex justify-center w-6">
             <img src="./assets/settings.svg" />
@@ -190,7 +193,7 @@
       </nav>
       <a
         href="#"
-        class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block"
+        class="flex items-center p-2 text-heading hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block mt-10"
       >
         <span class="inline-flex justify-center w-6">
           <img src="./assets/logout.svg" />
@@ -198,20 +201,18 @@
         <span class="ml-2 menu-item-text">Log Out</span>
       </a>
     </div>
-
-
       <!-- Main Content -->
-      <div class="w-full h-screen p-6">
-        <div class="p-6">
-          <div class="flex items-center gap-4">
+      <div class="w-full h-screen">
+        <div class="md:p-6 p-2">
+          <div class="flex items-center gap-3 mb-4">
             <img src="./assets/settings.svg" />
-            <h2 class="text-xl text-dash ">Settings</h2>
+            <h2 class="text-xl text-dash">Settings</h2>
           </div>
           <h2 class="text-2xl font-bold mb-6">Settings</h2>
-          <div class="flex flex-col md:flex-row">
-            <div class="w-full md:w-1/2 pr-4">
+          <div class="flex flex-col md:flex-row gap-4">
+            <div class="w-full md:w-1/2 ">
               <div class="mb-4">
-                <label class="block text-gray-700">Name</label>
+                <label class="block text-label">Name</label>
                 <input
                   type="text"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -220,7 +221,7 @@
               </div>
               <div class="mb-4">
                 <div class="">
-                  <h3 class="text-lg font-semibold mb-4">Profile Image</h3>
+                  <h3 class="text-lg font-semibold mb-4 text-label">Profile Image</h3>
                   <div
                     class="flex items-center justify-between bg-gray-50 border border-gray-300 p-4 rounded-md mb-4"
                   >
@@ -229,28 +230,14 @@
                         id="profileImage"
                         src=""
                         alt="Image Preview"
-                        class="w-16 h-16 rounded-full object-cover mr-4 hidden"
+                        class="w-16 h-16 rounded-md object-cover mr-4 hidden"
                       />
-                      <span id="imageName" class="text-gray-700"
+                      <span id="imageName" class="text-label"
                         >No image uploaded</span
                       >
                     </div>
-                    <button
-                      id="removeImage"
-                      class="p-2 bg-red-500 text-white rounded hover:bg-red-600 hidden"
-                    >
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-5 w-5"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M10 5a1 1 0 011 1v3h3a1 1 0 010 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 010-2h3V6a1 1 0 011-1z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
+                    <button id="removeImage" class="rounded hidden">
+                      <i class="far fa-trash-alt"></i>
                     </button>
                   </div>
                   <input
@@ -261,25 +248,25 @@
                   />
                   <label
                     for="fileInput"
-                    class="flex items-center px-4 py-2 bg-blue-500 text-white rounded cursor-pointer hover:bg-blue-600"
+                    class="text-label items-center px-4 py-2 bg-white border rounded cursor-pointer inline-block"
                   >
                     Replace Image
                   </label>
-                  <p class="text-sm text-gray-600 mt-2">
+                  <p class="text-sm text-heading mt-2">
                     Dimensions: 16 x 16 px<br />Format: jpg, pdf, png
                   </p>
                 </div>
               </div>
               <div class="mb-4">
-                <label class="block text-gray-700">Default Currency</label>
+                <label class="block text-label">Default Currency</label>
                 <select class="w-full p-2 border border-gray-300 rounded mt-1">
                   <option>Singapore Dollar (SGD)</option>
                 </select>
               </div>
             </div>
-            <div class="w-full md:w-1/2 pl-4">
+            <div class="w-full md:w-1/2">
               <div class="mb-4">
-                <label class="block text-gray-700">Address</label>
+                <label class="block text-label">Address</label>
                 <input
                   type="text"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -287,7 +274,7 @@
                 />
               </div>
               <div class="mb-4">
-                <label class="block text-gray-700">Phone Number</label>
+                <label class="block text-label">Phone Number</label>
                 <input
                   type="text"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -295,7 +282,7 @@
                 />
               </div>
               <div class="mb-4">
-                <label class="block text-gray-700">Email address</label>
+                <label class="block text-label">Email address</label>
                 <input
                   type="email"
                   class="w-full p-2 border border-gray-300 rounded mt-1"
@@ -304,7 +291,11 @@
               </div>
             </div>
           </div>
-          <button class="bg-gray-800 text-white p-2 rounded mt-4">Save</button>
+          <div class="flex justify-end">
+            <button class="bg-gray-800 text-white p-2 px-10 rounded mt-4">
+              Save
+            </button>
+          </div>
         </div>
       </div>
     </div>
